k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: aws-devops-platform
  labels:
    app: aws-devops-platform
spec:
  selector:
    app: aws-devops-platform

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000

  type: ClusterIP
